--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,6 +42,8 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
+      - name: Get data
+        run: git fetch
 
       # Fusionar cambios a la rama 'nightly'
       - name: Merge to nightly
