--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,11 +13,11 @@ jobs:
     steps:
       # Checkout del código
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.2.2
 
       # Configurar JDK
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4.5.0
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -27,6 +27,19 @@ jobs:
         run: ./gradlew test
   test_windows:
     name: Run Tests (Windows)
+    runs-on: windows-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.2.2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4.5.0
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Run Gradle tests
+        run: ./gradlew test
   deploy:
     name: Deploy to Nightly
     needs:
