--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,6 +44,7 @@ jobs:
     name: Deploy to Nightly
     needs:
       - test_linux
+      - test_windows
     runs-on: ubuntu-latest
     if: success()
 
