--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -58,6 +58,10 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
+      - name: Set token
+        env:
+          PAT: ${{ secrets.GH_PAT }}
+        run: git remote set-url origin https://x-access-token:${PAT}@github.com/dsaub/BarajaDeCartas.git
       - name: Get data
         run: git fetch
 
