--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -52,16 +52,15 @@ jobs:
       # Checkout del código
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_PAT }}
 
       # Configurar Git
       - name: Configure Git
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
-      - name: Set token
-        env:
-          PAT: ${{ secrets.GH_PAT }}
-        run: git remote set-url origin https://x-access-token:${PAT}@github.com/dsaub/BarajaDeCartas.git
+
       - name: Get data
         run: git fetch
 
