--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -62,7 +62,7 @@ jobs:
           git config --global user.email "actions@github.com"
 
       - name: Get data
-        run: git fetch
+        run: git fetch --all
 
       # Fusionar cambios a la rama 'nightly'
       - name: Merge to nightly
