Push gradle.yml

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -73,21 +73,7 @@ jobs:
 
       - name: Push branch
         run: git push origin nightly
-  deploy_javadocs:
-    name: Deploy JavaDocs
-    needs:
-      - test_linux
-      - test_windows
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy JavaDOC
-        uses: MathieuSoysal/Javadoc-publisher.yml@v2.5.0
-        with:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-          javadoc-branch: 'javadoc'
-          java-version: 17
-          target-folder: 'nightly/'
-          project: gradle
+
   deploy_devel_javadocs:
     name: Deploy Development JavaDocs
     runs-on: ubuntu-latest
@@ -99,4 +85,20 @@ jobs:
           javadoc-branch: 'javadoc'
           java-version: 17
           target-folder: 'development/'
+          project: gradle
+  deploy_javadocs:
+    name: Deploy Nightly JavaDocs
+    needs:
+      - test_linux
+      - test_windows
+      - deploy_devel_javadocs
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy JavaDOC
+        uses: MathieuSoysal/Javadoc-publisher.yml@v2.5.0
+        with:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          javadoc-branch: 'javadoc'
+          java-version: 17
+          target-folder: 'nightly/'
           project: gradle
